smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/expected-shape-name-but-eof.smithy
// Parse error at line 4, column 7 near `string`: Unexpected EOF
namespace com.foo

string
